# tripod-backend

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE.md  README.md  alembic.ini  api.http  docker-compose.yml  gcs-cors.json  pyproject.toml
.github/scripts/: claude_cost.py  claude_cost_report.py
.github/workflows/: claude-cost-report.yml  claude-mention.yml  claude-review.yml  deploy.yml  lint.yml  test.yml
alembic/: env.py
alembic/versions/: 20260226_0001_init_auth_rbac.py  20260226_0002_projects_organizations_access.py  20260226_0003_languages_table.py  20260226_0004_project_location.py  20260227_0005_add_phases_project_phases_phase_dependencies.py  20260303_0002_add_access_requests.py  20260304_0001_add_notifications_table.py  20260307_0001_add_app_hub_columns.py  20260308_0001_add_avatar_url_to_users.py  20260308_0002_add_org_fields.py  20260309_0001_add_status_to_project_phases.py  20260309_0003_create_oc_tables_seed_genres.py  20260312_0001_consolidate_project_access.py  20260316_0001_add_inngest_recording_columns.py  20260317_0001_add_locale_and_translations.py  20260318_0001_update_genre_taxonomy_add_register.py  20260327_0001_add_bcd_locking_fields.py  20260327_0002_add_password_reset_tokens.py  20260327_0002_add_reviewer_locale_to_bcd_approvals.py  20260327_0003_add_password_reset_tokens.py  20260401_0001_recording_user_id_set_null.py  20260413_0001_add_description_to_oc_recordings.py  (+6 more)
app/: main.py
app/api/: access_requests.py  rag.py  (+16 more)
http/: README.md  api.http  apps.http  auth.http  bhsa.http  errors.http  health.http  languages.http  organizations.http  phases.http  projects.http  rag.http  roles.http  users.http
scripts/: assign_admin.py  backfill_participant_enums.py  backfill_split_index.py  create_tripod_console_linear_issues.py  grant_app_role.py  seed_apps_roles.py  seed_phases.py  seed_project.py  set_github_secrets_from_gcp.sh
tests/: baker.py  conftest.py  test_access_request_service.py  test_app_service.py  test_auth_api.py  test_auth_service.py  test_authorization_service.py  test_bcd_api.py  test_bcd_approval.py  test_bcd_approval_workflow.py  test_bcd_crud.py  test_bcd_entry_brief.py  test_bcd_generation_logs.py  test_bcd_generation_pipeline.py  test_bcd_locking.py  test_bcd_misc_services.py  test_bcd_mm_integration.py  test_bcd_staleness_api.py  test_bcd_validation.py  test_bhsa_collection.py  test_bhsa_common_nouns.py  test_bhsa_service.py  test_entry_brief.py  test_entry_brief_places_objects.py  test_generator_entry_brief.py  test_language_service.py  test_meaning_map_generator.py  test_mm_bcd_integration.py  test_mm_crud.py  test_mm_export.py  test_mm_lists.py  test_mm_workflow.py  test_notification_hooks.py  test_notification_service.py  test_oc_invite_service.py  test_oc_recording_service.py  test_oc_split_lineage.py  test_oc_stats_service.py  test_oc_storyteller_service.py  test_org_scope.py  (+11 more)
(+274 files in other folders)
