[project]
name = "tripod-backend"
version = "0.1.0"
description = "Shared backend platform for Tripod systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "gunicorn==22.0.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic[email]==2.10.0",
    "pydantic-settings==2.6.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "httpx>=0.28.1",
    "langchain-core>=0.3.83",
    "langchain-text-splitters>=0.3.11",
    "langchain-google-genai>=4.0.0",
    "qdrant-client>=1.15.0,<1.17.0",
    "text-fabric>=12.6.0",
    "cachetools>=7.0.2",
    "procrastinate>=3.7.2",
    "structlog>=25.5.0",
    "structlog-gcp>=0.5.0",
    "langgraph>=1.0.10",
    "google-cloud-storage>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.19.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv", ".git", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4", "SIM", "PIE", "PGH", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["alembic/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
